--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@vuelidate/validators": "*",
     "core-js": "^3.25.3",
     "credit-card-input-mask": "^3.0.0",
+    "load-script": "^2.0.0",
     "nuxt": "^2.15.8",
     "nuxt-facebook-pixels-module": "^0.1.2",
     "vue": "^2.7.10",
