--- a/backEnd/composer.json
+++ b/backEnd/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^7.24",
         "laravel/passport": "^9.3",
         "laravel/tinker": "^2.0",
+        "maatwebsite/excel": "^3.1",
         "symfony/psr-http-message-bridge": "^2.0"
     },
     "require-dev": {
