--- a/backEnd/composer.json
+++ b/backEnd/composer.json
@@ -17,6 +17,7 @@
         "laravel/passport": "^9.3",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
+        "mercadopago/dx-php": "2.6.1",
         "symfony/psr-http-message-bridge": "^2.0"
     },
     "require-dev": {
