--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@mercadopago/sdk-js": "^0.0.3",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/google-analytics": "2.4",
     "@nuxtjs/i18n": "^7.3.1",
